# vpnctl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-lint-test.yaml
tests/: mocks.py  test_dbus_wrapper.py  test_ovpn_configs.py  test_ovpn_sessions.py  test_vpnctl.py
vpnctl/: __init__.py  __main__.py  commands.py
vpnctl/ovpn/: __init__.py  configs.py  sessions.py  util.py  wrapper.py
