[tool.poetry]
name = "vpnctl"
version = "0.0.1"
description = "A simple command line interface for managing and controlling VPN connections."
authors = ["Robert Mörseburg <fl4m@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fl4m/vpnctl"
keywords = ["vpn", "vpnctl", "openvpn"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: Unix",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pre-commit = "^2.10.0"

[tool.poetry.scripts]
vpnctl = "vpnctl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
